--- a/hello-perfect.xcodeproj/xcshareddata/xcschemes/hello-perfect-Package.xcscheme
+++ b/hello-perfect.xcodeproj/xcshareddata/xcschemes/hello-perfect-Package.xcscheme
@@ -165,7 +165,7 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       language = ""
       launchStyle = "0"
-      useCustomWorkingDirectory = "YES"
+      useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
